gitops/resources/platform-security/kyverno-policies/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: privileged-containers
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - istio-system
                - rook-ceph
                - falco
      validate:
        message: "Privileged containers are not allowed outside approved infra namespaces."
        pattern:
          spec:
            containers:
              - =(securityContext):
                  =(privileged): "false"
