gitops/resources/platform-security/kyverno-policies/require-requests-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-requests-limits
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: require-container-resources
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - mesh-demo
                - public
      validate:
        message: "Containers must define CPU/memory requests and limits."
        pattern:
          spec:
            containers:
              - name: "*"
                resources:
                  requests:
                    cpu: "?*"
                    memory: "?*"
                  limits:
                    cpu: "?*"
                    memory: "?*"
